--- a/src/css/menu.css
+++ b/src/css/menu.css
@@ -1,6 +1,13 @@
 a {
     text-decoration: none;
+    color: white;
 }
+
+a:not([href]):not([tabindex]) {
+    color: white;
+    text-decoration: none;
+}
+
 
 nav ul li:hover {
     transform: scale(1.2);
@@ -49,7 +56,7 @@ nav {
 }
 
 .logo a {
-    color: #000;
+    color: #fff;
     text-transform: uppercase;
     font-weight: 700;
     font-size: 24px;
@@ -102,7 +109,7 @@ nav ul li a {
         width: 40%;
         height: 100%;
         z-index: -1;
-        background: #fff;
+        background: #000000;
         opacity: 0;
         transition: all 0.3s ease;
     }
@@ -142,10 +149,14 @@ nav ul li a {
         margin-left: 0;
     }
 
+    .nav-wrapper ul li{
+        color: #fff;
+    }
+
     .nav-wrapper ul li a {
         padding: 10px 30px;
         opacity: 0;
-        color: #000;
+        color: #fff;
         font-size: 14px;
         font-weight: 600;
         letter-spacing: 1.2px;
@@ -169,7 +180,7 @@ nav ul li a {
         display: block;
         width: 20px;
         height: 2px;
-        background: #000;
+        background: #fff;
         border-radius: 2px;
         margin-left: 14px;
     }
@@ -193,7 +204,7 @@ nav ul li a {
 }
 
 #nav:checked + .nav-btn i {
-    background: #000;
+    /*background: #fff;*/
     transition: transform 0.2s ease;
 }
 
