--- a/src/css/menu.css
+++ b/src/css/menu.css
@@ -53,6 +53,7 @@ nav {
     padding-left: 90px;
     margin-left: 16px;
     margin-top: 8px;
+    color: white;
 }
 
 .logo a {
@@ -60,7 +61,7 @@ nav {
     text-transform: uppercase;
     font-weight: 700;
     font-size: 24px;
-    letter-spacing: 0px;
+    letter-spacing: 0;
     text-decoration: none;
 }
 
@@ -71,6 +72,7 @@ nav ul {
 nav ul li {
     display: inline-block;
     float: left;
+    color: white;
 }
 
 nav ul li:not(:first-child) {
@@ -84,7 +86,6 @@ nav ul li:last-child {
 nav ul li a {
     display: inline-block;
     outline: none;
-    color: #000;
     text-transform: uppercase;
     text-decoration: none;
     font-size: 14px;
