--- a/src/css/menu.css
+++ b/src/css/menu.css
@@ -113,6 +113,7 @@ nav ul li a {
         z-index: -1;
         background: #000000;
         opacity: 0;
+        visibility: hidden;
         transition: all 0.3s ease;
     }
 
@@ -158,6 +159,7 @@ nav ul li a {
     .nav-wrapper ul li a {
         padding: 10px 30px;
         opacity: 0;
+        visibility: hidden;
         color: #fff;
         font-size: 14px;
         font-weight: 600;
@@ -225,10 +227,12 @@ nav ul li a {
 #nav:checked ~ .nav-wrapper {
     z-index: 9990;
     opacity: 1;
+    visibility: visible;
 }
 
 #nav:checked ~ .nav-wrapper ul li a {
     opacity: 1;
+    visibility: visible;
     transform: translateX(0);
 }
 
