--- a/src/css/eventDetails.css
+++ b/src/css/eventDetails.css
@@ -49,7 +49,6 @@
     word-wrap: break-word;
     font-size: 20px;
     text-indent: 5%;
-    width: 90%;
     margin: 0 auto;
 }
 
@@ -115,5 +114,11 @@
     }
     100% {
         height: 70%;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .eventDescription {
+        width: 90%;
     }
 }
