--- a/src/css/eventDetails.css
+++ b/src/css/eventDetails.css
@@ -1,3 +1,5 @@
+@import "../css/fontfaces.css";
+
 .eventDescription {
     position: absolute;
     height: 80%;
@@ -11,12 +13,16 @@
 }
 
 .eventName {
+    font-weight: 900;
+    font-family: Iceberg;
     text-align: center;
     margin-top: 4px;
     font-size: 36px;
 }
 
 .tagline {
+    font-weight: 600;
+    font-family: NovaSquare;
     text-align: center;
 }
 
@@ -32,6 +38,9 @@
     -webkit-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
 }
+.rounds{
+    margin-bottom: 10px;
+}
 
 .round {
     padding: 10px;
@@ -40,12 +49,13 @@
 }
 
 .roundIndice {
+    font-family: TitilliumWeb-Bold;
     font-size: 20px;
     font-weight: bolder;
 }
 
 .round-text {
-    /*white-space: pre-wrap;*/
+    font-family: TitilliumWeb;
     word-wrap: break-word;
     font-size: 20px;
     text-indent: 5%;
@@ -62,10 +72,14 @@
 }
 
 .entryFee {
+    font-family: Oxanium-Bold;
     text-align: center;
-    margin-top: 1%;
-    font-size: 24px;
+    font-size: 20px;
     font-weight: bold;
+}
+
+.managers{
+    margin-top: 10px;
 }
 
 .managers, .bottom-part {
@@ -76,13 +90,21 @@
 .manager {
     display: inline-block;
     margin: 5px;
-    font-weight: bolder;
-    font-size: 18px;
 }
 
 .contact-text {
-    font-weight: bolder;
+    font-family: Oswald;
+    font-weight: 900;
     font-size: 18px;
+}
+.name{
+    font-family: Oswald;
+    font-weight: 600;
+    font-size: 16px;
+}
+.contact{
+    font-family: Oswald;
+    font-size: 12px;
 }
 
 .bottom-part {
