--- a/src/css/common_style.css
+++ b/src/css/common_style.css
@@ -39,4 +39,19 @@ canvas {
     font-family: Oxanium-Bold;
     color: white;
     font-size: 32px;
+    animation: glow 1s infinite alternate;
+}
+
+.event {
+    font-family: NovaSquare;
+    margin: 8px;
+    font-size: 20px;
+    color: white;
+    cursor: pointer;
+}
+
+@keyframes glow {
+    50% {
+        text-shadow: 0 0 10px #ffffff;
+    }
 }
