--- a/src/css/menu.css
+++ b/src/css/menu.css
@@ -14,22 +14,6 @@ nav ul li:hover {
     transition: all 0.2s ease ;
 }
 
-.social-media {
-    display: flex;
-    flex-direction: column;
-    width: auto;
-    height: auto;
-    position: absolute;
-    right: 1vw;
-    bottom: 1vh;
-    text-align: center;
-    z-index: 2;
-}
-
-.social-media a {
-    padding: 10px;
-}
-
 .n-container {
     width: 100%;
     position: absolute;
@@ -66,6 +50,11 @@ nav {
     text-decoration: none;
 }
 
+.logo img{
+    height: 50px;
+    object-fit: contain;
+}
+
 nav ul {
     float: right;
 }
@@ -95,10 +84,6 @@ nav ul li a {
 }
 
 @media screen and (max-width: 768px) {
-    .social-media{
-        visibility: hidden;
-    }
-
     .logo {
         padding: 0;
         margin-left: 0;
