--- a/src/css/eventDetails.css
+++ b/src/css/eventDetails.css
@@ -10,7 +10,7 @@
     transform: translate(-50%, -50%);
     background: white;
     background-size: cover;
-    opacity: 0.95;
+    padding: 10px 10px;
 }
 
 .eventName {
@@ -19,12 +19,18 @@
     text-align: center;
     margin-top: 4px;
     font-size: 36px;
+    overflow: overlay;
+    text-overflow: clip;
+    white-space: nowrap;
 }
 
 .tagline {
     font-weight: 600;
     font-family: NovaSquare;
     text-align: center;
+    overflow: overlay;
+    text-overflow: clip;
+    white-space: nowrap;
 }
 
 .event-content {
@@ -110,12 +116,14 @@
 
 .bottom-part {
     position: absolute;
-    width: 100%;
+    width: 90%;
     bottom: 3%;
     text-align: center;
     cursor: pointer;
     font-weight: bold;
     font-size: 16px;
+    left: 50%;
+    transform: translateX(-50%);
 }
 
 .back, .cart {
