--- a/src/css/eventDetails.css
+++ b/src/css/eventDetails.css
@@ -153,3 +153,17 @@
         width: 90%;
     }
 }
+
+/*.close-btn{*/
+/*    position: absolute;*/
+/*    top: -22px;*/
+/*    right: -12px;*/
+/*    font-size: 30px;*/
+/*}*/
+
+/*.fa{*/
+/*    background: white;*/
+/*    padding: 1px 4px 2px 4px;*/
+/*    border-radius: 50%;*/
+/*    border: 4px black solid;*/
+/*}*/
